--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="A simple tool for carpenters"
     />
     
-    <title>React App</title>
+    <title>Construction Project Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
