--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property='og:image' content='./public/logo512.png'/>
     <meta
       name="description"
-      content="A simple tool for carpenters"
+      content="A wall stud calculator that provides a running total of lumber needed"
     />
     
     <title>Construction Project Manager</title>
